# flight-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  script.sh  typescript
Model/: Lexer.cpp  Lexer.h  Model.h  OBJ.cpp  OBJ.h
include/: gm.h  obj.h
